src/objects/PSA_Billing__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings related to billing/invoicing</description>
    <fields>
        <fullName>PSA_Billing_Event_Max_Refresh__c</fullName>
        <defaultValue>1000</defaultValue>
        <description>Maximum number of times the Billing Event Regenerate page will be refreshed before displaying a warning message and discontinuing the refresh process</description>
        <inlineHelpText>Maximum number of times the Billing Event Regenerate page will be refreshed before displaying a warning message and discontinuing the refresh process</inlineHelpText>
        <label>PSA Billing Event Max Refresh</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSA_Billing_History_Error_Notify_List__c</fullName>
        <description>Email list to notify admins of an error attempting to link the current and archived billing events</description>
        <inlineHelpText>Email list to notify admins of an error attempting to link the current and archived billing events</inlineHelpText>
        <label>Billing History Error Notify List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Billing_History_Job_Seconds_Delay__c</fullName>
        <defaultValue>180</defaultValue>
        <description>How many seconds in the future the scheduled job to link &quot;current&quot; billing events with archived billing events that were released but then deleted</description>
        <inlineHelpText>How many seconds in the future the scheduled job to link &quot;current&quot; billing events with archived billing events that were released but then deleted</inlineHelpText>
        <label>Billing History Job Seconds Delay</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSA_Billing_Rules_Batch_Done_Email_List__c</fullName>
        <description>List of email addresses to notify when the Billing Rules Batch apex job is finished</description>
        <inlineHelpText>List of email addresses to notify when the Billing Rules Batch apex job is finished</inlineHelpText>
        <label>Billing Rules Batch Done Email List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Billing_Rules_Batch_Size__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Number of projects to apply the billing rules logic at one time</description>
        <inlineHelpText>Number of projects to apply the billing rules logic at one time</inlineHelpText>
        <label>PSA Billing Rules Batch Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSA_Earliest_LTA_Date__c</fullName>
        <description>Earliest date from which to include LTA Expenses for Projects where Expenses Billing Type is not &quot;As Incurred&quot;</description>
        <inlineHelpText>Earliest date from which to include LTA Expenses for Projects where Expenses Billing Type is not &quot;As Incurred&quot;</inlineHelpText>
        <label>Earliest LTA Date</label>
        <type>Date</type>
    </fields>
    <label>PSA Billing</label>
</CustomObject>